# substack-author-agent

./: .env.example  .gitignore  API.md  CLAUDE.md  LEARNINGS.md  README.md  agent.py  pyproject.toml  requirements.txt  scenarios.txt  server.py  server_claude.py  server_openai.py
agents/: agno.py  claude.py  constants.py  openai.py
agents/agno/: agent.py
agents/claude/: agent.py
agents/openai/: agent.py
agents/shared/: prompt.py  skills.py
skills/analyze-articles/: SKILL.md
skills/analyze-comments/: SKILL.md
skills/analyze-notes/: SKILL.md
skills/brand-voice/: SKILL.md
skills/content-ideas/: SKILL.md
